# micro-config-drive

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  test-metadata-openstack.json  test.yaml
.github/workflows/: ccpp.yml
data/: 50-ucd-config-drive.rules  cloud-init-firstboot.service.in  cloud-init-pre-network.service.in  cloud-init.service.in  ucd-aliyun.service.in  ucd-aws.service.in  ucd-oci.service.in  ucd-tct.service.in  ucd-tencent.service.in  ucd.service.in  ucd@.service.in
docs/: cloud-config.5  cloud-config.5.md  cloud-init.1  network-config.md  ucd-aws.1  ucd-aws.1.md  ucd-data-fetch.1.md  ucd-oci.1  ucd-oci.1.md  ucd-tct.1  ucd-tct.1.md  ucd.1  ucd.1.md
examples/: envar.yaml  example2  example4  example6  fbootcmd.yaml  groups.yaml  hostname.yaml  package_upgrade.yaml  packages.yaml  runcmd.yaml  service.yaml  ssh_authorized_keys.yaml  users.yaml  write_files.yaml
src/: async_task.c  async_task.h  ccmodules.h  curl.c  curl.h  datasources.h  debug.c  debug.h  default_user.h  disk.c  disk.h  handlers.h  interpreters.h  json.c  json.h  lib.c  lib.h  main.c  ucd-aws.c  ucd-data-fetch.c  ucd-oci.c  ucd-tct.c  userdata.c  userdata.h
src/ccmodules/: envar.c  fbootcmd.c  groups.c  hostname.c  package_upgrade.c  packages.c  runcmd.c  service.c  ssh_authorized_keys.c  users.c  wait-for-network.c  write_files.c
src/datasources/: openstack.c  openstack.h
src/interpreters/: cloud_config.c  cloud_config.h  shell_script.c
tests/: Makefile.am  curl_test.c  fetch_test  lib_test.c  userdata_test.c
tests/fetch_data/: expected  hostname  public-keys  user-data
